wip: build fields based on new vue sfc and meteor

--- a/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
@@ -27,6 +27,14 @@
             v-model="slide.slideSettings.slide.cssClass"
         />
     </blur-column>
+
+    <blur-column :cols="12">
+        <py-text-field 
+        label="Name"
+        placeholder="Enter text here"
+        required
+        v-model="slide.name" />
+    </blur-column>
 </blur-section>
 
 <blur-section
