--- a/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
@@ -34,7 +34,8 @@
     title-icon="blurph-text-h-one-bold"
     :style="viewStyle({
         mobile: {
-            'border-bottom': '1px solid var(--color-border-primary-default)'
+            'border-bottom': '1px solid var(--color-border-primary-default)',
+            '--blur-section-gap-y': '8px'
         },
     })"
 >
@@ -88,6 +89,11 @@
     padding
     :title="$tc('blurElysiumSlides.forms.slideDescription.label')"
     title-icon="blurph-textbox-bold"
+    :style="viewStyle({
+        mobile: {
+            '--blur-section-gap-y': '8px'
+        },
+    })"
 >
     <blur-column :cols="12">
         <py-colorpicker-field 
