--- a/src/Resources/app/administration/src/component/slides/form/linking/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/linking/template.html.twig
@@ -1,31 +1,38 @@
 <blur-section
     gap
     padding
+    :style="viewStyle({
+        mobile: {
+            'border-bottom': '1px solid var(--color-border-primary-default)',
+            '--blur-section-gap-y': '8px'
+        },
+    })"
 >
-    <blur-column :cols-tablet="6">
-        <blur-select-input
+    <blur-column :cols="12">
+        <py-select-field 
             :options="[
                 { value: 'custom', label: $tc('blurElysiumSlides.forms.slideLinking.typeCustom') },
                 { value: 'product', label: $tc('blurElysiumSlides.forms.slideLinking.typeProduct') },
             ]"
             :hideClearableButton="true"
             :label="$tc('blurElysiumSlides.forms.slideLinking.typeLabel')"
-            v-model:value="slide.slideSettings.slide.linking.type"
-        />
+            v-model="slide.slideSettings.slide.linking.type"
+            />
     </blur-column>
+
     <blur-column
         v-if="slide.slideSettings.slide?.linking?.type === 'custom'"
-        :cols-tablet="6"
+        :cols="12"
     >
-        <blur-text-input
-            v-model:value="slide.url"
+
+        <py-text-field 
+            v-model="slide.url"
             :label="$tc('blurElysiumSlides.forms.slideLinking.customUrl')"
             :placeholder="$tc('blurElysiumSlides.forms.slideLinking.customUrlPlaceholder')"
-            :helpText="$tc('blurElysiumSlides.forms.slideLinking.customUrlHelpText')"
-            :model-value="slide.url"
-            @update-value="value => slide.url = value"
-        />
+            :tooltip="$tc('blurElysiumSlides.forms.slideLinking.customUrlHelpText')"
+            />
     </blur-column>
+
     <blur-column
         v-else-if="slide.slideSettings.slide?.linking?.type === 'product'"
         :cols-tablet="6"
@@ -38,6 +45,7 @@
             v-model:value="slide.productId"
         />
     </blur-column>
+
     <blur-column v-if="slide.slideSettings.slide?.linking?.type === 'product'">
         <mt-switch
             @change="slide.slideSettings.slide.linking.showProductFocusImage = $event"
@@ -45,52 +53,48 @@
             :label="$tc('blurElysiumSlides.forms.slideLinking.showProductFocusImage')"
         />
     </blur-column>
-    <blur-column
-        :cols-tablet="6"
-        :cols-desktop="4"
-    >
-        <blur-text-input
-            v-model:value="slide.buttonLabel"
+
+    <blur-column :cols="12">
+        <py-text-field 
+            v-model="slide.buttonLabel"
             :label="$tc('blurElysiumSlides.forms.slideButtonLabel.label')"
             :placeholder="$tc('blurElysiumSlides.forms.slideButtonLabel.placeholder')"
-            :helpText="$tc('blurElysiumSlides.forms.slideButtonLabel.helpText')"
+            :tooltip="$tc('blurElysiumSlides.forms.slideButtonLabel.helpText')"
             :disabled="slide.slideSettings.slide.linking.overlay === true"
-            :model-value="slide.buttonLabel"
-            @update-value="value => slide.buttonLabel = value"
-        />
+            />
     </blur-column>
-    <blur-column
-        :cols-tablet="6"
-        :cols-desktop="4"
-    >
-        <blur-select-input
+
+    <blur-column :cols="12">
+        <py-select-field 
             :label="$tc('blurElysiumSlides.forms.slideButtonAppearance.label')"
-            :helpText="$tc('blurElysiumSlides.forms.slideButtonAppearance.helpText')"
+            :tooltip="$tc('blurElysiumSlides.forms.slideButtonAppearance.helpText')"
             :disabled="slide.slideSettings.slide.linking.overlay === true"
             :hideClearableButton="true"
             :options="buttonColors"
-            v-model:value="slide.slideSettings.slide.linking.buttonAppearance"
-        />
+            v-model="slide.slideSettings.slide.linking.buttonAppearance"
+            />
     </blur-column>
-    <blur-column
-        :cols-tablet="6"
-        :cols-desktop="4"
-    >
-        <blur-select-input
+
+    <blur-column :cols="12">
+        <py-select-field 
             :label="$tc('blurElysiumSlides.forms.slideButtonSize.label')"
-            :helpText="$tc('blurElysiumSlides.forms.slideButtonSize.helpText')"
+            :tooltip="$tc('blurElysiumSlides.forms.slideButtonSize.helpText')"
             :disabled="slide.slideSettings.slide.linking.overlay === true"
             :hideClearableButton="true"
             :options="buttonSizes"
-            v-model:value="slide.slideSettings.slide.linking.buttonSize"
-        />
+            v-model="slide.slideSettings.slide.linking.buttonSize"
+            />
     </blur-column>
-    <blur-column :cols-tablet="12">
+
+    <blur-column :cols="12">
         <mt-switch
             @change="slide.slideSettings.slide.linking.openExternal = $event"
             :checked="slide.slideSettings.slide.linking.openExternal"
             :label="$tc('blurElysiumSlides.forms.slideLinkingOpenExternal')"
         />
+    </blur-column>
+
+    <blur-column :cols="12">
         <mt-switch
             @change="slide.slideSettings.slide.linking.overlay = $event"
             :checked="slide.slideSettings.slide.linking.overlay"
