feat: refractor display/slide slide form

--- a/src/Resources/app/administration/src/component/py/base-field/style.scss
+++ b/src/Resources/app/administration/src/component/py/base-field/style.scss
@@ -59,6 +59,17 @@
     }
 }
 
+.py-slider-field {
+
+    .mt-number-field {
+        display: none !important;
+    }
+
+    .mt-block-field__block {
+        padding: 0 !important;
+    }
+}
+
 .py-select-popover {
 
     .mt-select-result-list__content {
