--- a/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
@@ -3,8 +3,9 @@
     padding
     :style="viewStyle({
         mobile: {
-            'border-bottom': '1px solid var(--color-border-primary-default)',
-            '--blur-section-gap-y': '8px'
+            'border-bottom': '1px solid var(--color-border-secondary-default)',
+            '--blur-section-gap-y': '8px',
+            '--container-gap-y': '12px'
         },
     })">
 
@@ -34,8 +35,9 @@
     title-icon="blurph-text-h-one-bold"
     :style="viewStyle({
         mobile: {
-            'border-bottom': '1px solid var(--color-border-primary-default)',
-            '--blur-section-gap-y': '8px'
+            'border-bottom': '1px solid var(--color-border-secondary-default)',
+            '--blur-section-gap-y': '8px',
+            '--container-gap-y': '12px'
         },
     })"
 >
@@ -91,7 +93,8 @@
     title-icon="blurph-textbox-bold"
     :style="viewStyle({
         mobile: {
-            '--blur-section-gap-y': '8px'
+            '--blur-section-gap-y': '8px',
+            '--container-gap-y': '12px'
         },
     })"
 >
