--- a/src/Resources/app/administration/src/component/slides/form/content/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/content/template.html.twig
@@ -1,91 +1,73 @@
-<blur-section>
+<blur-section
+    gap
+    padding
+    :style="viewStyle({
+        mobile: { 
+            borderBottom: '1px solid var(--color-border-secondary-default)',
+            '--blur-section-gap-y': '8px',
+            '--container-gap-y': '12px'
+        },
+    })">
     <blur-column>
-        <blur-section
-            gap
-            padding
-            :style="viewStyle({
-                mobile: { borderBottom: '1px solid var(--color-border-primary-default)' },
-            })"
-        >
-            <blur-column :cols-tablet="6">
-                <blur-number-input
-                    :label="$tc('blurElysiumSlides.forms.slideWidth.label')"
-                    :device="device"
-                    :placeholder="viewportsPlaceholder('content.maxWidth', $t('blurElysium.general.noLimit'))"
-                    :show-device="true"
-                    @on-device="deviceSwitch"
-                    :model-value="slideViewportSettings.content.maxWidth"
-                    @update-value="value => slideViewportSettings.content.maxWidth = value"
-                />
-            </blur-column>
-        </blur-section>
+        <py-number-field
+            :label="$tc('blurElysiumSlides.forms.slideWidth.label')"
+            :placeholder="viewportsPlaceholder('content.maxWidth', $t('blurElysium.general.noLimit'))"
+            v-model="slideViewportSettings.content.maxWidth"
+        />
     </blur-column>
-    <blur-column :cols-desktop="6">
-        <blur-section
-            gap
-            padding
-            :title="$tc('blurElysium.general.spacing')"
-            title-icon="blurph-ruler-bold"
-            :style="viewStyle({
-                mobile: { borderBottom: '1px solid #ddd' },
-                desktop: { borderBottom: 'none' },
-            })"
-        >
-            <blur-column
-                :cols-tablet="6"
-                :cols-desktop="6"
-            >
-                <blur-number-input
-                    :label="$tc('blurElysium.general.paddingX')"
-                    :device="device"
-                    :placeholder="viewportsPlaceholder('content.paddingX', 15)"
-                    :show-device="true"
-                    @on-device="deviceSwitch"
-                    :model-value="slideViewportSettings.content.paddingX"
-                    @update-value="value => slideViewportSettings.content.paddingX = value"
-                />
-            </blur-column>
-            <blur-column
-                :cols-tablet="6"
-                :cols-desktop="6"
-            >
-                <blur-number-input
-                    :label="$tc('blurElysium.general.paddingY')"
-                    :device="device"
-                    :placeholder="viewportsPlaceholder('content.paddingY', 0)"
-                    :show-device="true"
-                    @on-device="deviceSwitch"
-                    :model-value="slideViewportSettings.content.paddingY"
-                    @update-value="value => slideViewportSettings.content.paddingY = value"
-                />
-            </blur-column>
-        </blur-section>
+</blur-section>
+
+<blur-section
+    gap
+    padding
+    :title="$tc('blurElysium.general.spacing')"
+    title-icon="blurph-ruler-bold"
+    :style="viewStyle({
+        mobile: { 
+            borderBottom: '1px solid var(--color-border-secondary-default)',
+            '--blur-section-gap-y': '8px',
+            '--container-gap-y': '12px'
+        },
+    })">
+    <blur-column>
+        <py-number-field
+            :label="$tc('blurElysium.general.horizontal')"
+            :placeholder="viewportsPlaceholder('content.paddingX', 15)"
+            v-model="slideViewportSettings.content.paddingX"
+        />
     </blur-column>
-    <blur-column :cols-desktop="6">
-        <blur-section
-            gap
-            padding
-            :title="$tc('blurElysium.general.alignment')"
-            title-icon="blurph-arrows-out-line-horizontal-bold"
-        >
-            <blur-column
-                :cols-tablet="6"
-                :cols-desktop="6"
-            >
-                <blur-select-input
-                    :label="$tc('blurElysium.general.textAlign')"
-                    :placeholder="viewportsPlaceholder('content.textAlign', 'left', 'blurElysium.general')"
-                    :device="device"
-                    :show-device="true"
-                    :options="[
-                        { value: 'left', label: $tc('blurElysium.general.left') },
-                        { value: 'center', label: $tc('blurElysium.general.center') },
-                        { value: 'right', label: $tc('blurElysium.general.right') }
-                    ]"
-                    @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.content.textAlign"
-                />
-            </blur-column>
-        </blur-section>
+    <blur-column>
+        <py-number-field
+            :label="$tc('blurElysium.general.vertical')"
+            :placeholder="viewportsPlaceholder('content.paddingY', 0)"
+            v-model="slideViewportSettings.content.paddingY"
+        />
+    </blur-column>
+</blur-section>
+
+<blur-section
+    gap
+    padding
+    :style="viewStyle({
+        mobile: { 
+            borderBottom: '1px solid var(--color-border-secondary-default)',
+            '--blur-section-gap-y': '8px',
+            '--container-gap-y': '12px'
+        },
+    })"
+    :title="$tc('blurElysium.general.alignment')"
+    title-icon="blurph-arrows-out-line-horizontal-bold">
+    
+    <blur-column>
+        <py-select-field
+            :label="$tc('blurElysium.general.textAlign')"
+            :placeholder="viewportsPlaceholder('content.textAlign', 'left', 'blurElysium.general')"
+            :options="[
+                { value: 'left', label: $tc('blurElysium.general.left') },
+                { value: 'center', label: $tc('blurElysium.general.center') },
+                { value: 'right', label: $tc('blurElysium.general.right') }
+            ]"
+            v-model="slideViewportSettings.content.textAlign"
+        />
     </blur-column>
 </blur-section>
