--- a/src/Resources/app/administration/src/component/py/base-field/template.html.twig
+++ b/src/Resources/app/administration/src/component/py/base-field/template.html.twig
@@ -1,7 +1,7 @@
 <div
     :class="[
         'py-base-field',
-        layout ? `layout-${layout}` : 'layout-row'
+        `layout-${layout}`
     ]">
     <div
         :style="{
