--- a/src/Resources/app/administration/src/component/slides/form/cover/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/cover/template.html.twig
@@ -1,188 +1,153 @@
-<mt-card
-    position-identifier="blurElysium.slide.form.cover"
-    :title="$tc('blurElysiumSlides.forms.slideCover.label')"
-    :class="['content-no-padding']"
->
-    <template #headerRight>
-        <blur-device-switch
-            layout="row"
-            show-label="false"
-            :default-viewport="device"
-            :style="{
-                padding: '0',
-                width: '100%',
-                justifyContent: 'center',
-                '--container-gap': '12px',
-                '--icon-padding': '6px',
-                '--icon-bg-color': '#ffffff',
-                '--icon-hover-bg-color': 'var(--color-gray-100)',
-            }"
-            :device="device"
-            @change-device="device => elysiumUI.setDevice(device)"
+<blur-section
+    gap
+    padding
+    :style="viewStyle({
+        mobile: { 
+            borderBottom: '1px solid var(--color-border-secondary-default)',
+            '--blur-section-gap-y': '8px',
+            '--container-gap-y': '12px'
+        },
+    })"
+    :title="$tc('blurElysiumSlides.forms.slideCoverImage.label')"
+    :description="$tc('blurElysiumSlides.forms.slideCoverImage.description')">
+
+    <blur-column>
+        <sw-upload-listener
+            :upload-tag="slideCoverUploadTag"
+            auto-upload
+            @media-upload-finish="setSlideCover"
         />
-    </template>
-
-    <template #tabs>
-        <mt-tabs
-            :defaultItem="activeTab"
-            :items="tabs"
-            @new-item-active="activeTab = $event"
+        <sw-media-upload-v2
+            variant="regular"
+            label="Medium"
+            :disabled="!(permissionCreate || permissionEdit)"
+            file-accept="image/*"
+            :upload-tag="slideCoverUploadTag"
+            :source="slideCover"
+            :allow-multi-select="false"
+            :default-folder="'blur_elysium_slides'"
+            @media-upload-remove-image="removeSlideCover"
+            @media-upload-sidebar-open="openMediaModal"
         />
-    </template>
-    <blur-section>
-        <blur-column
-            padding
-            :cols-tablet="6"
-            :cols-desktop="8"
-            :style="viewStyle({
-                mobile:  { position: 'relative' },
-                desktop: { borderRight: '1px solid var(--color-border-primary-default)' }
-            })"
-        >
-            <mt-loader v-if="mediaLoading"/>
+    </blur-column>
+</blur-section>
 
-            <template v-if="activeTab === 'coverImage'">
-                <blur-section
-                    gap-y
-                    :description="$tc('blurElysiumSlides.forms.slideCoverImage.description')"
-                >
-                    <blur-column>
-                        <sw-upload-listener
-                            :upload-tag="slideCoverUploadTag"
-                            auto-upload
-                            @media-upload-finish="setSlideCover"
-                        />
-                        <sw-media-upload-v2
-                            variant="regular"
-                            label="Medium"
-                            :disabled="!(permissionCreate || permissionEdit)"
-                            file-accept="image/*"
-                            :upload-tag="slideCoverUploadTag"
-                            :source="slideCover"
-                            :allow-multi-select="false"
-                            :default-folder="'blur_elysium_slides'"
-                            @media-upload-remove-image="removeSlideCover"
-                            @media-upload-sidebar-open="openMediaModal"
-                        />
-                    </blur-column>
-                </blur-section>
-            </template>
+<blur-section
+    gap
+    padding
+    :style="viewStyle({
+        mobile: { 
+            borderBottom: '1px solid var(--color-border-secondary-default)',
+            '--blur-section-gap-y': '8px',
+            '--container-gap-y': '12px'
+        },
+    })"
+    :title="$tc('blurElysiumSlides.forms.slideCoverVideo.label')"
+    :description="$tc('blurElysiumSlides.forms.slideCoverVideo.description')">
 
-            <template v-if="activeTab === 'coverVideo'">
-                <blur-section
-                    gap-y
-                    :description="$tc('blurElysiumSlides.forms.slideCoverVideo.description')"
-                >
-                    <blur-column>
-                        <sw-upload-listener
-                            upload-tag="blur-elysium-slide-cover-video"
-                            auto-upload
-                            @media-upload-finish="payload => setSlideCover(payload, true)"
-                        />
-                        <sw-media-upload-v2
-                            ref="coverVideoUploadElement"
-                            variant="regular"
-                            label="Medium"
-                            :disabled="!(permissionCreate || permissionEdit)"
-                            file-accept="video/*"
-                            upload-tag="blur-elysium-slide-cover-video"
-                            :source="slideCoverVideo"
-                            :allow-multi-select="false"
-                            :default-folder="'blur_elysium_slides'"
-                            @media-upload-remove-image="removeSlideCover(true)"
-                            @media-upload-sidebar-open="openMediaModal('slideCoverVideo')"
-                        />
-                    </blur-column>
-                </blur-section>
-            </template>
+    <blur-column>
+        <sw-upload-listener
+            upload-tag="blur-elysium-slide-cover-video"
+            auto-upload
+            @media-upload-finish="payload => setSlideCover(payload, true)"
+        />
+        <sw-media-upload-v2
+            ref="coverVideoUploadElement"
+            variant="regular"
+            label="Medium"
+            :disabled="!(permissionCreate || permissionEdit)"
+            file-accept="video/*"
+            upload-tag="blur-elysium-slide-cover-video"
+            :source="slideCoverVideo"
+            :allow-multi-select="false"
+            :default-folder="'blur_elysium_slides'"
+            @media-upload-remove-image="removeSlideCover(true)"
+            @media-upload-sidebar-open="openMediaModal('slideCoverVideo')"
+        />
+    </blur-column>
+</blur-section>
 
-            <template v-if="activeTab === 'coverMeta'">
-                <blur-section
-                    gap
-                    :description="$tc('blurElysiumSlides.forms.slideCoverMeta.description')"
-                >
-                    <blur-column
-                        :cols-tablet="6">
+<blur-section
+    gap
+    padding
+    :style="viewStyle({
+        mobile: { 
+            borderBottom: '1px solid var(--color-border-secondary-default)',
+            '--blur-section-gap-y': '8px',
+            '--container-gap-y': '12px'
+        },
+    })"
+    :title="$tc('blurElysium.general.settings')">
 
-                        <blur-text-input
-                            v-model="slide.contentSettings.slideCover.alt"
-                            :label="$tc('blurElysiumSlides.forms.slideCoverMeta.alt.label')"
-                        />
+    <blur-column>
+        <py-select-field
+            :label="$tc('blurElysium.general.objectPos')"
+            :placeholder="viewportsPlaceholder('coverMedia.objectPosY', 'center', 'blurElysium.general')"
+            :options="[
+                { value: 'top', label: $tc('blurElysium.general.top') },
+                { value: 'center', label: $tc('blurElysium.general.center') },
+                { value: 'bottom', label: $tc('blurElysium.general.bottom') }
+            ]"
+            v-model="slideViewportSettings.coverMedia.objectPosY" />
+    </blur-column>
+    
+    <blur-column>
+        <py-select-field
+            :label="$tc('blurElysium.general.objectPos')"
+            :placeholder="viewportsPlaceholder('coverMedia.objectPosX', 'center', 'blurElysium.general')"
+            :options="[
+                { value: 'left', label: $tc('blurElysium.general.left') },
+                { value: 'center', label: $tc('blurElysium.general.center') },
+                { value: 'right', label: $tc('blurElysium.general.right') }
+            ]"
+            v-model="slideViewportSettings.coverMedia.objectPosX" />
+    </blur-column>
 
-                    </blur-column>
+    <blur-column>
+        <py-select-field
+            :label="$tc('blurElysium.general.objectFit')"
+            :placeholder="viewportsPlaceholder('coverMedia.objectFit', 'cover', 'blurElysium.general')"
+            :options="[
+                { value: 'cover', label: $tc('blurElysium.general.cover') },
+                { value: 'contain', label: $tc('blurElysium.general.contain') },
+                { value: 'auto', label: $tc('blurElysium.general.auto') }
+            ]"
+            v-model="slideViewportSettings.coverMedia.objectFit" />
+    </blur-column>
+</blur-section>
 
-                    <blur-column
-                        :cols-tablet="6">
+<blur-section
+    gap
+    padding
+    :title="$tc('blurElysiumSlides.forms.slideCoverMeta.label')"
+    :style="viewStyle({
+        mobile: { 
+            borderBottom: '1px solid var(--color-border-secondary-default)',
+            '--blur-section-gap-y': '8px',
+            '--container-gap-y': '12px'
+        },
+    })"
+    :description="$tc('blurElysiumSlides.forms.slideCoverMeta.description')">
 
-                        <blur-text-input
-                            v-model="slide.contentSettings.slideCover.title"
-                            :label="$tc('blurElysiumSlides.forms.slideCoverMeta.title.label')"
-                        />
-                    </blur-column>
-                </blur-section>
-            </template>
-        </blur-column>
+    <blur-column>
+        <py-text-field
+            v-model="slide.contentSettings.slideCover.alt"
+            :label="$tc('blurElysiumSlides.forms.slideCoverMeta.alt.label')"
+        />
+    </blur-column>
 
-        <blur-column
-            v-if="activeTab !== 'coverMeta'"
-            padding
-            :cols-tablet="6"
-            :cols-desktop="4"
-        >
-            <blur-section gap-y>
-                <blur-column>
-                    <blur-select-input
-                        :label="$tc('blurElysium.general.objectPosY')"
-                        :placeholder="viewportsPlaceholder('coverMedia.objectPosY', 'center', 'blurElysium.general')"
-                        :device="device"
-                        :show-device="true"
-                        :options="[
-                            { value: 'top', label: $tc('blurElysium.general.top') },
-                            { value: 'center', label: $tc('blurElysium.general.center') },
-                            { value: 'bottom', label: $tc('blurElysium.general.bottom') }
-                        ]"
-                        @on-device="deviceSwitch"
-                        v-model:value="slideViewportSettings.coverMedia.objectPosY"
-                    />
-                </blur-column>
-                <blur-column>
-                    <blur-select-input
-                        :label="$tc('blurElysium.general.objectPosX')"
-                        :placeholder="viewportsPlaceholder('coverMedia.objectPosX', 'center', 'blurElysium.general')"
-                        :device="device"
-                        :show-device="true"
-                        :options="[
-                            { value: 'left', label: $tc('blurElysium.general.left') },
-                            { value: 'center', label: $tc('blurElysium.general.center') },
-                            { value: 'right', label: $tc('blurElysium.general.right') }
-                        ]"
-                        @on-device="deviceSwitch"
-                        v-model:value="slideViewportSettings.coverMedia.objectPosX"
-                    />
-                </blur-column>
-                <blur-column>
-                    <blur-select-input
-                        :label="$tc('blurElysium.general.objectFit')"
-                        :placeholder="viewportsPlaceholder('coverMedia.objectFit', 'cover', 'blurElysium.general')"
-                        :device="device"
-                        :show-device="true"
-                        :options="[
-                            { value: 'cover', label: $tc('blurElysium.general.cover') },
-                            { value: 'contain', label: $tc('blurElysium.general.contain') },
-                            { value: 'auto', label: $tc('blurElysium.general.auto') }
-                        ]"
-                        @on-device="deviceSwitch"
-                        v-model:value="slideViewportSettings.coverMedia.objectFit"
-                    />
-                </blur-column>
-            </blur-section>
-        </blur-column>
-    </blur-section>
-    <sw-media-modal-v2
-        v-if="mediaModal.open"
-        :allow-multi-select="false"
-        entity-context="blur_elysium_slides"
-        @media-modal-selection-change="onAddMediaModal"
-        @modal-close="closeMediaModal"
-    />
-</mt-card>
+    <blur-column>
+        <py-text-field
+            v-model="slide.contentSettings.slideCover.title"
+            :label="$tc('blurElysiumSlides.forms.slideCoverMeta.title.label')"
+        />
+    </blur-column>
+</blur-section>
+
+<sw-media-modal-v2
+    v-if="mediaModal.open"
+    :allow-multi-select="false"
+    entity-context="blur_elysium_slides"
+    @media-modal-selection-change="onAddMediaModal"
+    @modal-close="closeMediaModal"
+/>
