--- a/src/Resources/app/administration/src/component/slides/section/media/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/section/media/template.html.twig
@@ -1,4 +1,14 @@
+<mt-tabs
+    :defaultItem="activeTab"
+    :items="tabs"
+    @new-item-active="activeTab = $event"
+/>
+
 <div>
-    <elysium-slides-form-cover/>
-    <elysium-slides-form-focus-image/>
+    <template v-if="activeTab === 'slideCover'">
+        <elysium-slides-form-cover/>
+    </template>
+    <template v-if="activeTab === 'focusImage'">
+        <elysium-slides-form-focus-image/>
+    </template>
 </div>
