--- a/src/Resources/app/administration/src/component/slide/preview/template.html.twig
+++ b/src/Resources/app/administration/src/component/slide/preview/template.html.twig
@@ -2,8 +2,9 @@
     :style="{
         display: 'flex',
         flexDirection: 'column',
-        gap: '20px'
+        gap: '20px',
     }">
+    
     <div 
         :style="slideStyles">
         <elysium-slide-preview-cover />
