fix: #56 show button in slide preview

--- a/src/Resources/app/administration/src/component/slide/preview/content/template.html.twig
+++ b/src/Resources/app/administration/src/component/slide/preview/content/template.html.twig
@@ -11,4 +11,11 @@
         v-if="description"
         v-html="description"
         :style="descriptionStyles" />
+
+    <mt-button
+        v-if="showButton"
+        size="default"
+        :target="slide.slideSettings?.slide?.linking?.openExternal ? '_blank' : '_self'">
+        {{slide.buttonLabel}}
+    </mt-button>
 </div>
