fix: #56 add mt-entity-field and link to product linking field, changgge show product field position

--- a/src/Resources/app/administration/src/component/py/base-field/style.scss
+++ b/src/Resources/app/administration/src/component/py/base-field/style.scss
@@ -104,3 +104,29 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.py-field {
+
+    &.sw-entity-single-select {
+
+        .sw-entity-single-select__selection-text {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            padding: 0px !important;
+        }
+
+        .sw-entity-single-select__selection-input {
+            padding: 0px !important;
+        }
+
+        .sw-select__selection {
+            padding: 6px 12px !important;
+        }
+    }
+
+    .sw-block-field__block {
+        border-radius: 8px;
+        height: auto;
+    }
+}
