--- a/src/Resources/app/administration/src/component/slides/form/linking/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/linking/template.html.twig
@@ -34,26 +34,15 @@
     </blur-column>
 
     <blur-column
-        v-else-if="slide.slideSettings.slide?.linking?.type === 'product'"
-        :cols-tablet="6"
+        v-if="slide.slideSettings.slide?.linking?.type === 'product'"
+        :cols="12"
     >
-        <sw-entity-single-select
+        <py-entity-field 
             entity="product"
-            class="blur-entity-select-input"
             :label="$tc('blurElysiumSlides.forms.slideLinking.selectProduct')"
             :error="validateProduct"
             v-model:value="slide.productId"
-        />
-    </blur-column>
-
-    <blur-column 
-        :cols="12"
-        v-if="slide.slideSettings.slide?.linking?.type === 'product'">
-        <mt-switch
-            @change="slide.slideSettings.slide.linking.showProductFocusImage = $event"
-            :checked="slide.slideSettings.slide.linking.showProductFocusImage"
-            :label="$tc('blurElysiumSlides.forms.slideLinking.showProductFocusImage')"
-        />
+            />
     </blur-column>
 
     <blur-column :cols="12">
@@ -98,6 +87,14 @@
                 'gap': '8px',
             },
         })">
+
+        <mt-switch
+            v-if="slide.slideSettings.slide?.linking?.type === 'product'"
+            @change="slide.slideSettings.slide.linking.showProductFocusImage = $event"
+            :checked="slide.slideSettings.slide.linking.showProductFocusImage"
+            :label="$tc('blurElysiumSlides.forms.slideLinking.showProductFocusImage')"
+        />
+
         <mt-switch
             @change="slide.slideSettings.slide.linking.openExternal = $event"
             :checked="slide.slideSettings.slide.linking.openExternal"
