--- a/src/Resources/app/administration/src/component/slides/form/focus-image/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/focus-image/template.html.twig
@@ -25,7 +25,7 @@
             upload-tag="blur-elysium-slide-focus-image"
             :source="focusImage"
             :allow-multi-select="false"
-            :default-folder="'blur_elysium_slides'"
+            :default-folder-name="'blur_elysium_slides'"
             @media-upload-remove-image="removeFocusImage"
             @media-upload-sidebar-open="mediaModal.open = true"
         />
