fix: #56 remove imageFullWidth option from focus image

--- a/src/Resources/app/storefront/src/scss/_elysium-slide.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slide.scss
@@ -1,24 +1,19 @@
 .blur-elysium-slide {
     position: relative;
     width: 100%;
+
     background: {
         repeat: no-repeat;
         color: var(--slide-bg-color, transparent);
-        image: var(
-            --slide-bg-image,
-            linear-gradient(
-                var(--slide-gradient-deg, 45deg),
-                var(--slide-gradient-color-start, transparent),
-                var(--slide-gradient-color-end, transparent)
-            )
-        );
+        image: var(--slide-bg-image,
+                linear-gradient(var(--slide-gradient-deg, 45deg),
+                    var(--slide-gradient-color-start, transparent),
+                    var(--slide-gradient-color-end, transparent)));
     }
+
     border-radius: var(--slide-border-radius, 0px);
     aspect-ratio: var(--slide-aspect-ratio, auto);
-    padding: calc(
-            var(--slide-padding-y, 15px) + var(--slide-padding-offset-y, 0px)
-        )
-        calc(var(--slide-padding-x, 15px) + var(--slide-padding-offset-x, 0px));
+    padding: calc(var(--slide-padding-y, 15px) + var(--slide-padding-offset-y, 0px)) calc(var(--slide-padding-x, 15px) + var(--slide-padding-offset-x, 0px));
     align-items: var(--slide-align-items, center);
     justify-content: var(--slide-justify-content, center);
     max-height: var(--slide-max-height);
@@ -37,8 +32,7 @@
     user-select: none;
     z-index: 1;
     object-fit: var(--cover-object-fit, cover);
-    object-position: var(--cover-object-pos-x, center)
-        var(--cover-object-pos-y, center);
+    object-position: var(--cover-object-pos-x, center) var(--cover-object-pos-y, center);
 }
 
 .blur-elysium-slide-container-wrapper {
@@ -58,9 +52,11 @@
     max-width: var(--container-max-width, none);
     padding: var(--container-padding-y, 15px) var(--container-padding-x, 15px);
     border-radius: var(--container-border-radius, 0px);
+
     background: {
         color: var(--container-bg-color, transparent);
     }
+
     overflow: hidden;
     flex-basis: 100%;
     width: 100%;
@@ -86,12 +82,6 @@
     order: var(--image-order, 2);
     width: 100%;
     max-width: var(--image-max-w, none);
-
-    img {
-        @extend .d-block !optional;
-        @extend .img-fluid !optional;
-        width: var(--image-width, auto);
-    }
 }
 
 .blur-elysium-slide-headline {
